2006-11-27  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/iterators.c (igraph_vs_vector_copy) : added
	* interfaces/python/src/convert.c
	(igraphmodule_PyObject_to_vs_t) : fixed a memory leak
	* src/flow.c (igraph_i_mincut_value_undirected) :
	fixed a memory leak
	* src/igraph.h : added igraph_st_mincut_value declaration
	* interfaces/python/src/graphobject.c : added some new functions

2006-11-24  Gabor Csardi  <csardi@kzoo.edu>

	* src/structural_properties.c (igraph_neighborhood_size)
	(igraph_neighborhood, igraph_neighborhood_graphs) : added

2006-11-23  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/igraphmodule.c
	(igraphmodule_i_attribute_permute_edges) : added
	* interfaces/python/src/graphobject.c : now all functions expecting
	a vertex list accept a single vertex or a None object denoting all
	vertices
	* interfaces/python/src/old_test.py : now checks for proper attribute
	handling in Graph.to_directed

2006-11-22  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/convert.c (igraphmodule_PyObject_to_vs_t) :
	added
	* interfaces/python/src/graphobject.c
	(igraphmodule_Graph_transitivity_undirected,
	igraphmodule_Graph_transitivity_local_undirected) : added
	* interfaces/python/src/test.py : modified to use the igraph.test
	package
	* interfaces/python/src/old_test.py : renamed from test.py

2006-11-21  Gabor Csardi  <csardi@kzoo.edu>

	* src/type_indexededgelist.c (igraph_delete_vertices) : rewritten

2006-11-19  Gabor Csardi  <csardi@kzoo.edu>

	* src/structural_properties.c (igraph_transitivity) : removed
	(igraph_transitivity_undirected) : made public, modified to "return" 
	with scalar instead of a vector
	(igraph_transitivity_local_undirected) : added
	* examples/simple/igraph_transitivity.c : updated

	* ssrc/flow.c (igraph_i_mincut_value_undirected) : minor change to 
	make it compile with older gcc
	* src/foreign-graphml.c : include <stdarg.h> to make it compile with
	older gcc
	
2006-11-18  Gabor Csardi  <csardi@kzoo.edu>
