@@ -33,6 +33,8 @@
 <!-- doxrox-include igraph_growing_random_game -->
 <!-- doxrox-include igraph_callaway_traits_game -->
 <!-- doxrox-include igraph_establishment_game -->
+<!-- doxrox-include igraph_preference_game -->
+<!-- doxrox-include igraph_asymmetric_preference_game -->
 <!-- doxrox-include igraph_recent_degree_game -->
 <!-- doxrox-include igraph_barabasi_aging_game -->
 <!-- doxrox-include igraph_recent_degree_aging_game -->
